[package]
name = "creator-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib", # required for wasm
    "rlib",   # required for static rust libraries
]

[features]
default = ["js"]
# Enable JS interoperability support
js = ["console_error_panic_hook", "wasm-bindgen", "self_cell", "ansi-to-html"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
ariadne = { version = "0.5.0" }
chumsky = "0.9.3"
regex = "1.10.6"
once_cell = "1.19.0"

# JS interoperation dependencies
wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
self_cell = { version = "1.0.4", optional = true }
ansi-to-html = { version = "0.2.1", optional = true, features = ["lazy-init"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# opt-level = "s"
# strip = "symbols"
