[package]
name = "creator-compiler"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
description = "A reimplementation of Creator (https://creatorsim.github.io/)'s compiler"
categories = ["command-line-utilities", "compilers"]
keywords = ["compiler", "assembly", "assembler", "Creator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib", # required for wasm
    "rlib",   # required for static rust libraries
]

[[bin]]
name = "creator-compiler"
required-features = ["cli"]

[features]
default = ["js", "cli"]
# Enable JS interoperability support
js = [
    "console_error_panic_hook",
    "wasm-bindgen",
    "self_cell",
    "ansi-to-html",
    "pseudoinstructions",
]
# Enable pseudoinstruction evaluation. Requires execution in WebAssembly
pseudoinstructions = ["js-sys"]
# Enable CLI interface
cli = ["clap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
schemars = "0.8"
ariadne = { version = "0.5.0" }
chumsky = "0.9.3"
regex = "1.10.6"
once_cell = "1.19.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"

# CLI interface
clap = { version = "4.5.9", optional = true, features = ["derive"] }

# JS interoperation dependencies
wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
self_cell = { version = "1.0.4", optional = true }
ansi-to-html = { version = "0.2.1", optional = true, features = ["lazy-init"] }
js-sys = { version = "0.3.72", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]
